# Script-VM

./: .gitignore  AGENT.md  Cargo.toml  HANDOVER.md  ISSUE.md  PROGRESS.md  REPOSITORY-PROCESS.md
.github/workflows/: ci.yml
ARCHITECTURE/: ARCHIVE-MANIFEST.md  README.md
ARCHITECTURE/00-project/: PROJECT-OVERVIEW.md  STATUS.md  WORKSPACE-INDEX.md
ARCHITECTURE/01-phase-1/admin/: PHASE-1-CHANGELOG.md
ARCHITECTURE/01-phase-1/freeze/: PHASE-1-FREEZE.md
PLAN/: MANIFEST.md  README.md  RISK-REGISTER.md  TRACEABILITY-MATRIX.md  UNIFIED-IMPLEMENTATION-GUIDANCE.md  WORK-PACKAGE-INDEX.md
agent/gate-records/: G0-G7-20260714-wp19-final.md  G6-20260710-integration-notes.md  G6-20260714-integration-notes.md  G6-20260714-wp18-complete.md  PHASE-3-BOOTSTRAP-CLOSURE-20260714.md  WP-19-handoff.md  WP-19-integration-gate-plan.md  WP-19-post-freeze-erratum-policy.md  WP-19-regression-gate-plan.md  WP-19-release-candidate-criteria.md
crates/script_codegen/: Cargo.toml
crates/script_codegen/src/: codegen.rs  error.rs  lib.rs  program.rs
crates/script_eir_lower/: Cargo.toml
crates/script_eir_lower/src/: error.rs  lib.rs  lower.rs  package.rs  pipeline.rs  program.rs
crates/script_lex/: Cargo.toml
crates/script_lower/: Cargo.toml
crates/script_lower/src/: error.rs  lib.rs  lower.rs
crates/script_parse/: Cargo.toml
crates/script_sema/: Cargo.toml
crates/sir/: Cargo.toml
crates/sir_validate/: Cargo.toml
crates/vm_cli/: Cargo.toml
crates/vm_cli/src/: main.rs
crates/vm_core/: Cargo.toml
crates/vm_diag/: Cargo.toml
crates/vm_eval/: Cargo.toml
crates/vm_host/: Cargo.toml
crates/vm_runtime/: Cargo.toml
crates/vm_tests/: Cargo.toml
crates/vm_tests/src/: conformance.rs  diagnostics.rs  gap_closure.rs  integration.rs  lib.rs  negative.rs  regression.rs
docs/: IMPLEMENTATION-STATUS.md
docs/agent-plan/: AGENT-MASTER-PLAN.md  AGENT-OPERATING-PROTOCOL.md  AGENT-PLAN-REVIEW.md  GATE-CHECKLIST.md  HANDOFF-TEMPLATE.md  IMPLEMENTATION-CODING-PLAN.md  MANIFEST.md  README.md  TRACEABILITY-MATRIX.md  UNIFIED-IMPLEMENTATION-GUIDANCE.md  WORK-PACKAGE-INDEX.md  local-reference-map.md
docs/frozen-specs/: README.md
docs/phase-1/: P1-GAP-MATRIX.md  P1-TEST-MATRIX.md
scripts/check/: workspace.ps1
scripts/integration/: g6-scan.ps1  g6-scan.sh
scripts/test/: workspace.ps1
scripts/validate/: aliases.ps1
tests/: MATRIX.md
tests/conformance/: README.md
tests/diagnostics/: README.md
tests/negative/: README.md
tests/regression/: README.md
(+182 files in other folders)
