[workspace]
members = [
    "crates/sir",
    "crates/sir_validate",
    "crates/vm_core",
    "crates/vm_runtime",
    "crates/vm_eval",
    "crates/vm_diag",
    "crates/vm_host",
    "crates/vm_tests",
    "crates/vm_cli",
    "crates/script_lex",
    "crates/script_parse",
    "crates/script_sema",
]
resolver = "2"