[package]
name = "script_codegen"
version = "0.1.0"
edition = "2021"
description = "Bootstrap SIR/AST to EIR codegen for vm_eval (WP-25)"

[dependencies]
script_lex = { path = "../script_lex" }
script_parse = { path = "../script_parse" }
script_sema = { path = "../script_sema" }
vm_core = { path = "../vm_core" }
vm_diag = { path = "../vm_diag" }
vm_runtime = { path = "../vm_runtime" }
vm_eval = { path = "../vm_eval" }
