[package]
name = "vm_cli"
version = "0.1.0"
edition = "2021"
description = "Script VM command-line interface (source via SIR→EIR path)"

[[bin]]
name = "script-vm"
path = "src/main.rs"

[dependencies]
script_eir_lower = { path = "../script_eir_lower" }
vm_core = { path = "../vm_core" }
vm_eval = { path = "../vm_eval" }
